refactor: modernize/reformat